[gd_scene load_steps=7 format=3 uid="uid://dmtuc03fuk5dc"]

[ext_resource type="Theme" uid="uid://cp2u1kgj60ic" path="res://Resources/default_theme.tres" id="1_ousv4"]
[ext_resource type="Script" path="res://Scripts/Battle/BattleGUI.gd" id="1_phavr"]
[ext_resource type="Texture2D" uid="uid://blgh1lvsfpiu8" path="res://Graphics/GUI/Border.png" id="3_wyejc"]

[sub_resource type="Animation" id="Animation_at1tv"]
resource_name = "Fade"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_j4fij"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d1bfn"]
_data = {
"Fade": SubResource("Animation_at1tv"),
"RESET": SubResource("Animation_j4fij")
}

[node name="BattleGUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
theme = ExtResource("1_ousv4")
script = ExtResource("1_phavr")

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 124.0
grow_vertical = 0

[node name="MainPanel" type="NinePatchRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 216.0
offset_top = 616.0
offset_right = 1064.0
offset_bottom = 720.0
texture = ExtResource("3_wyejc")
patch_margin_left = 15
patch_margin_top = 11
patch_margin_right = 15
patch_margin_bottom = 11
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainPanel"]
libraries = {
"": SubResource("AnimationLibrary_d1bfn")
}

[node name="TurnOrderHBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -640.0
offset_right = 640.0
offset_bottom = 112.0
grow_horizontal = 2
theme_override_constants/separation = 10
alignment = 1

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
